--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   calendar_date_picker2: ^1.0.2
   intl: ^0.17.0
+  dio: ^5.4.3+1
 
 
 dev_dependencies:
@@ -62,7 +63,6 @@ flutter:
   uses-material-design: true
   assets:
     - assets/
-    - assets/icons/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
